<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <android.support.constraint.ConstraintLayout

            android:id="@+id/constrain_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/border_main"
            android:orientation="vertical"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/text_if_you_dont_have"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="49dp"
                android:gravity="left"
                android:text="@string/if_you_dont_have_lives"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/zero_lives_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:gravity="center_horizontal"
                android:text="@string/zero_lives"
                android:textColor="#ff000000"
                android:textSize="20sp"
                android:textStyle="italic"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_if_you_dont_have" />


            <Button
                android:id="@+id/button_retunt_lives"
                android:layout_width="0dp"
                android:layout_height="64dp"

                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginTop="32dp"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/return_text"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/zero_lives_text" />

        </android.support.constraint.ConstraintLayout>

        <Button
            android:id="@+id/button_close"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_alignParentBottom="false"
            android:layout_centerHorizontal="false"


            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/close"
            android:textSize="20sp" />

    </FrameLayout>

</layout>