<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <android.support.constraint.ConstraintLayout

            android:id="@+id/constrain_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/border_main"
            android:orientation="vertical"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/text_exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:text="@string/want_exit"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/text_place"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/text_place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textStyle="italic"
                android:layout_marginBottom="100dp"
                android:gravity="center_horizontal"
                android:text="@string/luck"
                android:textColor="#ff000000"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.405"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />


        </android.support.constraint.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="false"
            android:layout_centerHorizontal="false"


            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            >

                <Button
                android:id="@+id/btn_ok"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_weight="1"

                android:gravity="center_vertical|center_horizontal"
                android:text="@string/yes"
                android:textSize="20sp"
                    android:layout_marginRight="20dp"
                />

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="20dp"

                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/no"
                    android:textSize="20sp"
                    />

        </LinearLayout>



    </FrameLayout>

</layout>