<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:layout_marginBottom="10dp"
    android:layout_marginLeft="15dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="15dp"

    >

    <android.support.constraint.ConstraintLayout

        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="32dp"

        android:background="@drawable/border_main">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/your_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/textView"
            android:layout_marginStart="24dp"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="43dp"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:id="@+id/editText"
            android:layout_marginRight="24dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginEnd="24dp"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:background="@android:color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="dfdff"
            android:layout_marginLeft="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/editText"
            android:layout_marginStart="24dp"
            android:id="@+id/text_with_result"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_with_result"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:id="@+id/linearLayout2">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="10dp"
                android:layout_height="50dp"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:cropToPadding="false"
                android:scaleType="centerInside"
                android:src="@drawable/kubok1" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="10dp"
                android:layout_height="50dp"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:src="@drawable/kubok2" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="10dp"
                android:layout_height="50dp"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:cropToPadding="false"
                android:scaleType="centerInside"
                android:src="@drawable/kubok3" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/not_result"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/not_result"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/not_result"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="16dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="42dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
            android:background="@android:color/white">


        </android.support.v7.widget.RecyclerView>


    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_alignParentBottom="false"
        android:layout_centerHorizontal="false"

        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/close"
        android:textSize="20sp" />

</FrameLayout>